Computed value for 'content' property is incorrect.

Computed value on elements is by default 'normal'
and on :before and :after computes to 'none'
Spec: https://www.w3.org/TR/CSS2/generate.html#content

BUG=788904

Change-Id: Iefd07961445b057d9f893e057f35b082c214454d
Reviewed-on: https://chromium-review.googlesource.com/942126
Reviewed-by: Rune Lillesveen <futhark@chromium.org>
Commit-Queue: Ramya Vadlamudi <ramya.v@samsung.com>
Cr-Commit-Position: refs/heads/master@{#541400}
Former-commit-id: 11fb2ae26b6e84211adf8270eb4f0cf42b945fe8